- add correct start command for new build structure